--- a/public/404.html
+++ b/public/404.html
@@ -4,9 +4,12 @@
     <meta charset=utf-8>
     <title>Redirecting...</title>
     <link rel=canonical href="/dot-clock/index.html">
-    <meta http-equiv=refresh content="1; url=/dot-clock/">
+    <meta http-equiv=refresh content="0; url=/dot-clock/">
   </head>
   <body>
+    <script>
+      console.log(document.location)
+    </script>
     <h1>Redirecting...</h1>
     <a href="/dot-clock/">Click here if you are not redirected.</a>
     <!-- <script>var n=location.href.replace("index.php?/", "");if (n!=location.href)location=n;</script> -->
