--- a/public/404.html
+++ b/public/404.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset=utf-8>
     <title>Redirecting...</title>
-    <link rel=canonical href="/dot-clock/index.html">
+    <!-- <link rel=canonical href="/dot-clock/index.html"> -->
     <meta http-equiv=refresh content="0; url=/dot-clock/">
   </head>
   <body>
